Modified Startup and Memory/TPS
Changed how much memory is being used.